# usvfs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SetupPackage.cmake  StandardSetup.cmake  appveyor.yml  buildall.bat
cmake_modules/: ConfigureQt.cmake  FindAsmJit.cmake  FindCppFormat.cmake  FindGTest.cmake  FindSpdlog.cmake  FindUdis86.cmake  QtUtils.cmake  Utils.cmake  add_protoc_command.cmake  cotire.cmake
include/: dllimport.h  usvfs.h  usvfs_version.h  usvfsparameters.h
licenses/: asmjit.txt  spdlog.txt
patches/: boost_patches.patch  boost_vector_overflow.patch  type_traits_vs15_fix.patch  vc12_fix_has_member_function_callable_with.patch
shared/: CMakeLists.txt  addrtools.cpp  addrtools.h  custom_casts.h  debug_monitor.cpp  debug_monitor.h  directory_tree.cpp  directory_tree.h  exceptionex.cpp  initguard.cpp  initguard.h  logging.cpp  logging.h  ntdll_declarations.cpp  ntdll_declarations.h  scopeguard.cpp  scopeguard.h  shared_memory.h  shmlogger.cpp  shmlogger.h  stringcast.h  stringcast_basic.h  stringcast_win.cpp  stringcast_win.h  stringutils.cpp  stringutils.h  unicodestring.cpp  unicodestring.h  wildcard.cpp  wildcard.h  winapi.cpp  winapi.h  windows_error.cpp  windows_sane.h
shared_test/: CMakeLists.txt  main.cpp
src/shared/: debug_monitor.cpp  debug_monitor.h  directory_tree.cpp  directory_tree.h  exceptionex.h  loghelpers.cpp  loghelpers.h  ntdll_declarations.cpp  ntdll_declarations.h  shared_memory.h  shmlogger.cpp  stringcast_basic.h  stringutils.cpp  test_helpers.cpp  test_helpers.h  unicodestring.cpp  unicodestring.h  wildcard.cpp  winapi.cpp  winapi.h  windows_error.h
src/thooklib/: asmjit_sane.h  ttrampolinepool.cpp  ttrampolinepool.h  udis86wrapper.cpp
src/tinjectlib/: asmjit_sane.h  injectlib.cpp  injectlib.h
src/usvfs_dll/: hookcallcontext.cpp  hookcallcontext.h  hookcontext.cpp  hookcontext.h  hookmanager.cpp  hookmanager.h  redirectiontree.h  semaphore.cpp  stringcast_boost.cpp  stringcast_boost.h  usvfs.cpp  version.rc
src/usvfs_dll/hooks/: cogetserverpid.h  kernel32.cpp  kernel32.h  ntdll.cpp  ntdll.h  ole32.cpp  ole32.h  sharedids.h
src/usvfs_helper/: inject.cpp  inject.h
src/usvfs_proxy/: main.cpp  version.rc
temptest/: CMakeLists.txt  main.cpp
test/fixtures/usvfs_test/basic/: vfs_mappings.txt
test/fixtures/usvfs_test/basic/mount.postmortem/: root0.txt  root0w.txt  root1.txt  root1w.txt
test/fixtures/usvfs_test/basic/mount.postmortem/rfolder/: rfiledeletewrite.txt  rfilerewrite.txt
test/fixtures/usvfs_test/basic/mount/rfolder/: rfile0.txt  rfiledelete.txt  rfiledeletewrite.txt  rfilerewrite.txt
test/fixtures/usvfs_test/basic/source/: root1.txt  root1w.txt
test/fixtures/usvfs_test/basic/source.postmortem/: root2.txt
test/fixtures/usvfs_test/basic/source.postmortem/mod1/: mod1w.txt
test/fixtures/usvfs_test/basic/source.postmortem/mod1/mfolder1/: mfile.txt
test/fixtures/usvfs_test/basic/source.postmortem/mod2/: mod2.txt
test/fixtures/usvfs_test/basic/source.postmortem/mod2/mfolder4/: mfiledeletemove2p.txt  mfiledeletewrite.txt  mfilerewrite.txt
test/fixtures/usvfs_test/basic/source.postmortem/mod4/mfolder4/: mfile.txt  mfiledeletemove.txt  mfilemoveover.txt  mfileoverwrite.txt  mfilerewrite.txt
test/fixtures/usvfs_test/basic/source.postmortem/overwrite/: root2w.txt
test/fixtures/usvfs_test/basic/source.postmortem/overwrite/mfolder1/: newfile1.txt
test/fixtures/usvfs_test/basic/source.postmortem/overwrite/mfolder2/: newfile2.txt
test/fixtures/usvfs_test/basic/source/mod1/: mod1.txt
test/fixtures/usvfs_test/basic/source/mod3/: mod3.txt
test/shared_test/: main.cpp
test/test_file_operations/: test_file_operations.cpp  test_filesystem.cpp  test_filesystem.h  test_ntapi.cpp  test_ntapi.h  test_ntdll_declarations.h  test_w32api.cpp  test_w32api.h
test/testinject_dll/: main.cpp  main.h
test/thooklib_test/: main.cpp  test_hooks.cpp
test/tinjectlib_test/: main.cpp
test/tvfs_test/: main.cpp
test/usvfs_test/: main.cpp  usvfs_basic_test.cpp  usvfs_basic_test.h  usvfs_test.cpp  usvfs_test_base.cpp  usvfs_test_base.h
test/usvfs_test_runner/: usvfs_test_runner.cpp
testinject_bin/: CMakeLists.txt
testinject_dll/: CMakeLists.txt
thooklib/: CMakeLists.txt  hook_x86.asm  hooklib.cpp  hooklib.h  ttrampolinepool.cpp  ttrampolinepool.h  udis86wrapper.cpp  udis86wrapper.h  utility.cpp  utility.h
thooklib_test/: CMakeLists.txt  main.cpp  test_hooks.cpp  trampoline_x64.asm
tinjectlib/: CMakeLists.txt  injectlib.cpp
tinjectlib_test/: CMakeLists.txt
usvfs/: CMakeLists.txt  dllimport.h  errorreport.cpp  errorreport.h  hookcallcontext.cpp  hookcallcontext.h  hookcontext.cpp  hookcontext.h  hookmanager.cpp  hookmanager.h  loghelpers.cpp  loghelpers.h  redirectiontree.cpp  semaphore.cpp  semaphore.h  usvfs.cpp  usvfs.h  usvfsparameters.h  version.rc
usvfs/hooks/: kernel32.cpp  kernel32.h  ntdll.cpp  ntdll.h  ole32.cpp  ole32.h  sharedids.h
usvfs_helper/: CMakeLists.txt  inject.cpp  inject.h  usvfsparameters.cpp  usvfsparameters.h
usvfs_loader/: CMakeLists.txt  main.cpp
usvfs_proxy/: CMakeLists.txt  main.cpp
usvfs_test/: CMakeLists.txt  main.cpp
vsbuild/: asmjit.vcxproj  asmjit.vcxproj.filters  common.props  external_dependencies.props  fmt.vcxproj  fmt.vcxproj.filters  platform_x64.props  platform_x86.props  shared.vcxproj  shared.vcxproj.filters  shared_common.props  shared_test.vcxproj  shared_test.vcxproj.filters  spdlog.vcxproj  spdlog.vcxproj.filters  stage_helper.cmd  staging_paths.props  test_common.props  test_file_operations.vcxproj  test_file_operations.vcxproj.filters  testinject_bin.vcxproj  testinject_bin.vcxproj.filters  testinject_dll.vcxproj  testinject_dll.vcxproj.filters  thooklib.vcxproj  thooklib.vcxproj.filters  thooklib_test.vcxproj  thooklib_test.vcxproj.filters  tinjectlib.vcxproj  tinjectlib.vcxproj.filters  tinjectlib_test.vcxproj  tinjectlib_test.vcxproj.filters  tvfs_test.vcxproj  tvfs_test.vcxproj.filters  udis86.vcxproj  udis86.vcxproj.filters  usvfs.sln  usvfs_common.props  usvfs_dll.vcxproj  usvfs_dll.vcxproj.filters  (+8 more)
(+30 files in other folders)
